--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,15 +32,36 @@
           </tr>
         </thead>
         <tbody>
-          <% @books.each do |book| %>
+          <!--bookの投稿一覧-->
+        <% @books.each do |book| %>
           <tr>
+            
             <td><%= link_to user_path(book.user.id) do %>
-              <%= attachment_image_tag book.user, :profile_image, fallback: "no_image.jpg", size:'40x40' %></td>
+              <%= attachment_image_tag book.user, :profile_image, fallback: "no_image.jpg", size:'40x40' %>
               <% end %>
+            </td>
             <td><%= link_to book.title, book_path(book) %></td>
             <td><%= book.body %></td>
-          </tr>
-          <% end %>
+         
+          <!--いいね機能-->
+          
+          <td>
+            <% if @book.favorited_by?(user_id: @current_user.id, book_id: @book.id) %>
+              <p>
+                <%= link_to favorites_path(@book), method: :delete do %>
+                 ♥<%= @book.favorites.count %> いいね
+                <% end %>
+              </p>
+            <% else %>
+              <p>
+                <%= link_to favorites_path(@book), method: :post do %>
+                  ♡<%= @book.favorites.count %> いいね
+                <% end %>
+              </p>
+           <% end %>
+          </td>
+         <% end %>
+        </tr>
         </tbody>
       </table>
       </div>
