--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
 <script src="https://kit.fontawesome.com/f03fd448b3.js" crossorigin="anonymous"></script>
 
 <main>
-  
+
    <% if @book.errors.any? %>
      <div class = "text-danger h2">
       <%= @book.errors.count %> errors prohibited this obj from being saved:
@@ -14,7 +14,7 @@
         <% end %>
     <% end %>
     </li>
-    
+
   <div class="container px-5 px-sm-0">
     <div class = "row">
       <div class="col-md-3">
@@ -35,27 +35,29 @@
           <!--bookの投稿一覧-->
         <% @books.each do |book| %>
           <tr>
-            
+
             <td><%= link_to user_path(book.user.id) do %>
               <%= attachment_image_tag book.user, :profile_image, fallback: "no_image.jpg", size:'40x40' %>
               <% end %>
             </td>
             <td><%= link_to book.title, book_path(book) %></td>
             <td><%= book.body %></td>
-         
+
           <!--いいね機能-->
-          
+
           <td>
-            <%# if @book.favorited_by?(user_id: @current_user.id, book_id: @book.id) %>
+            <% if book.favorited_by?(current_user) %>
               <p>
-                <%= link_to favorites_path(@book), method: :delete do %>
-                 ♥<%= @book.favorites.count %> いいね
+                <%= link_to book_favorites_path(book), method: :DELETE do %>
+                <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+                 ♥<%= book.favorites.count %> いいね
                 <% end %>
               </p>
             <% else %>
               <p>
-                <%= link_to favorites_path(@book), method: :post do %>
-                  ♡<%= @book.favorites.count %> いいね
+                <%= link_to book_favorites_path(book), method: :POST do %>
+                 <i class="fa fa-heart-o" aria-hidden="true"></i>
+                  ♡<%= book.favorites.count %> いいね
                 <% end %>
               </p>
            <% end %>
