--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,25 @@
              </td>
            <td><%= link_to @book_detail.title, book_path %></td>
            <td><%= @book_detail.body %></td>
+
+          <!--いいね機能-->
+          <td>
+            <% if @book.favorited_by?(current_user) %>
+              <p>
+                <%= link_to book_favorites_path(@book), method: :DELETE do %>
+                <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+                 ♥<%= @book.favorites.count %> いいね
+                <% end %>
+              </p>
+            <% else %>
+              <p>
+                <%= link_to book_favorites_path(@book_detail), method: :POST do %>
+                 <i class="fa fa-heart-o" aria-hidden="true"></i>
+                  ♡<%= @book.favorites.count %> いいね
+                <% end %>
+              </p>
+           <% end %>
+          </td>
            <td>
              <% if @book_detail.user == current_user %>
               <%= link_to "Edit", edit_book_path(@book_detail), class: "btn btn-sm btn-secondary bg-success text-white"%>
