--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -62,6 +62,9 @@
               </p>
            <% end %>
           </td>
+          <td>
+            <p>コメント数：<%= @book.book_comments.count %></p>
+          </td>
          <% end %>
         </tr>
         </tbody>
