--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -63,7 +63,7 @@
            <% end %>
           </td>
           <td>
-            <p>コメント数：<%= @book.book_comments.count %></p>
+            <p>コメント数：<%= book.book_comments.count %></p>
           </td>
          <% end %>
         </tr>
